--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -10,8 +10,9 @@ spring:
       name: orderservice
   cloud:
     nacos:
+      server-addr: localhost:8848
       discovery:
-        server-addr: localhost:8848
+        cluster-name: HZ # 集群名称
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
@@ -21,7 +22,7 @@ logging:
     cn.itcast: debug
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://127.0.0.1:10086/eureka
